changed counter-bg and testimonials-bg link

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,11 +1,9 @@
-
 /*
 Template Name: Biziness	
 Author: MarkUps
 Author URI: http://www.markups.io/
 Version: 1.0
 */
-
 
 /* Table of Content
 ==================================================
@@ -25,18 +23,17 @@ Version: 1.0
 #RESPONSIVE STYLE
 */
 
-
 /*--------------------*/
 /* BASIC TYPOGRAPHY */
 /*--------------------*/
 
 body,
 html {
-	overflow-x:hidden;
+	overflow-x: hidden;
 }
 
 body {
-	font-family: 'Open Sans', sans-serif;
+	font-family: "Open Sans", sans-serif;
 	font-size: 15px;
 	letter-spacing: 0.5px;
 	line-height: 1.5;
@@ -54,9 +51,9 @@ ul li {
 	line-height: 1.59;
 }
 
-a { 
+a {
 	text-decoration: none;
-	color: #2f2f2f;  
+	color: #2f2f2f;
 }
 
 a:hover,
@@ -71,35 +68,34 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: 'Montserrat', sans-serif;
+	font-family: "Montserrat", sans-serif;
 	font-weight: 700;
 	margin-top: 0;
 }
-
 
 h1 {
 	font-size: 38px;
 }
 
-h2 {  
-	font-size: 32px; 
-	line-height: 1.13; 
+h2 {
+	font-size: 32px;
+	line-height: 1.13;
 }
 
-h3 {  
-	font-size: 26px;  
+h3 {
+	font-size: 26px;
 }
 
-h4 {  
-	font-size: 22px;  
+h4 {
+	font-size: 22px;
 }
 
-h5 {  
-	font-size: 20px;  
+h5 {
+	font-size: 20px;
 }
 
-h6 {  
-	font-size: 18px;  
+h6 {
+	font-size: 18px;
 }
 
 img {
@@ -130,7 +126,7 @@ pre code {
 	color: #333;
 }
 
-del{
+del {
 	text-decoration-color: #ee6e73;
 }
 
@@ -158,7 +154,6 @@ blockquote {
 	background-color: #f8f8f8;
 	border-radius: 0 4px 4px 0;
 	padding: 5px 15px;
-	
 }
 
 blockquote p {
@@ -178,19 +173,19 @@ button:focus {
 /*Wordpress default class*/
 
 .alignleft {
-	float:left;
-	margin-right:8px;
+	float: left;
+	margin-right: 8px;
 }
 
 .aligncenter {
-	display:block;
-	margin:10px auto;
+	display: block;
+	margin: 10px auto;
 }
 
 .alignright {
-	float:right;
-	margin-left:8px;
-}		
+	float: right;
+	margin-left: 8px;
+}
 
 .alignnone {
 	max-width: 100%;
@@ -243,8 +238,6 @@ button:focus {
 	background-color: #fff;
 }
 
-
-
 /*--------------------*/
 /* HEADER */
 /*--------------------*/
@@ -267,16 +260,16 @@ button:focus {
 .navbar-default .navbar-brand:focus {
 	color: #fff;
 	font-size: 35px;
-	font-family: 'Montserrat', sans-serif;
+	font-family: "Montserrat", sans-serif;
 	margin-top: -5px;
 }
 
-.navbar-brand img{
+.navbar-brand img {
 	margin-top: -12px;
 }
 
-#mu-header.mu-fixed-nav{
-	background-color: rgba(0,0,0,0.8);
+#mu-header.mu-fixed-nav {
+	background-color: rgba(0, 0, 0, 0.8);
 	width: 100%;
 	position: fixed;
 	padding: 15px 0;
@@ -313,25 +306,24 @@ button:focus {
 	color: #fff;
 }
 
-.navbar-default .navbar-nav > .active > a, 
-.navbar-default .navbar-nav > .active > a:focus, 
-.navbar-default .navbar-nav > .active > a:hover{
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:focus,
+.navbar-default .navbar-nav > .active > a:hover {
 	background-color: transparent;
 	color: #fff;
 }
-
 
 /*--------------------*/
 /* FEATURED SLIDER */
 /*--------------------*/
 
-#mu-featured-slider{
+#mu-featured-slider {
 	display: inline;
 	float: left;
 	width: 100%;
 }
 
-.mu-featured-slider-area{
+.mu-featured-slider-area {
 	display: inline;
 	float: left;
 	width: 100%;
@@ -350,8 +342,8 @@ button:focus {
 	width: 100%;
 }
 
-.mu-featured-slider-single::before{
-	content: '';
+.mu-featured-slider-single::before {
+	content: "";
 	position: absolute;
 	bottom: 0;
 	left: 0;
@@ -381,11 +373,11 @@ button:focus {
 	margin-bottom: 20px;
 }
 
-.mu-featured-slider-content .mu-primary-btn{
+.mu-featured-slider-content .mu-primary-btn {
 	margin-top: 20px;
 }
 
-.slick-dotted.slick-slider{
+.slick-dotted.slick-slider {
 	margin-bottom: 0;
 }
 
@@ -398,25 +390,23 @@ button:focus {
 	background-color: #fff;
 	border-radius: 10px;
 	-webkit-transform: scale(1);
-	        transform: scale(1);
+	transform: scale(1);
 	-webkit-transition: all 0.5s;
 	transition: all 0.5s;
 	opacity: 0.5;
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
 	height: 18px;
 	width: 18px;
-
 }
 
 .slick-dots li button:hover,
 .slick-dots li button:focus,
 .slick-dots li.slick-active button {
 	-webkit-transform: scale(1.1);
-	        transform: scale(1.1);
+	transform: scale(1.1);
 	opacity: 1;
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
 }
-
 
 .slick-dots li button::before,
 .slick-dots li.slick-active button::before {
@@ -425,11 +415,9 @@ button:focus {
 	width: 18px;
 }
 
-
 /*--------------------*/
 /* ABOUT US */
 /*--------------------*/
-
 
 #mu-about {
 	display: inline;
@@ -466,14 +454,14 @@ button:focus {
 	margin-bottom: 20px;
 }
 
-.mu-about-content{
+.mu-about-content {
 	display: inline;
 	float: left;
 	margin-top: 70px;
 	width: 100%;
 }
 
-.mu-about-content-single{
+.mu-about-content-single {
 	display: inline;
 	float: left;
 	text-align: center;
@@ -488,18 +476,16 @@ button:focus {
 	border-radius: 10px;
 }
 
-.mu-about-content-single h4{
+.mu-about-content-single h4 {
 	margin-bottom: 20px;
 }
-
-
 
 /*--------------------*/
 /* COUNTER */
 /*--------------------*/
 
 #mu-counter {
-	background-image: url("assets/images/counter-bg.jpeg");
+	background-image: url("../images/counter-bg.jpeg");
 	background-position: center center;
 	background-size: cover;
 	background-attachment: fixed;
@@ -511,7 +497,7 @@ button:focus {
 
 #mu-counter:before {
 	bottom: 0;
-	content: '';
+	content: "";
 	left: 0;
 	top: 0;
 	right: 0;
@@ -566,11 +552,9 @@ button:focus {
 	color: #ecf0f1;
 }
 
-
 /*--------------------*/
 /* SERVICE */
 /*--------------------*/
-
 
 #mu-service {
 	display: inline;
@@ -607,14 +591,14 @@ button:focus {
 	margin-bottom: 20px;
 }
 
-.mu-service-content{
+.mu-service-content {
 	display: inline;
 	float: left;
 	margin-top: 70px;
 	width: 100%;
 }
 
-.mu-service-content-single{
+.mu-service-content-single {
 	display: inline;
 	float: left;
 	text-align: left;
@@ -631,20 +615,18 @@ button:focus {
 	border-radius: 10px;
 }
 
-.mu-service-content-single h4{
+.mu-service-content-single h4 {
 	margin-bottom: 20px;
 	font-size: 20px;
 }
 
-.mu-service-content-single p{
+.mu-service-content-single p {
 	font-size: 15px;
 }
-
 
 /*--------------------*/
 /* PORTFOLIO */
 /*--------------------*/
-
 
 #mu-portfolio {
 	background-color: #f8f8f8;
@@ -682,14 +664,14 @@ button:focus {
 	margin-bottom: 20px;
 }
 
-.mu-portfolio-content{
+.mu-portfolio-content {
 	display: inline;
 	float: left;
 	margin-top: 50px;
 	width: 100%;
 }
 
-.mu-portfolio-filter-area{
+.mu-portfolio-filter-area {
 	display: inline;
 	float: left;
 	width: 100%;
@@ -720,18 +702,17 @@ button:focus {
 	padding-top: 30%;
 	text-align: center;
 	-webkit-transform: scale(0);
-	        transform: scale(0);
+	transform: scale(0);
 	-webkit-transition: all 0.5s;
 	transition: all 0.5s;
 	opacity: 0.9;
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=90)";
 }
 
-.filtr-item:hover .mu-filter-item-content{
+.filtr-item:hover .mu-filter-item-content {
 	-webkit-transform: scale(1);
-	        transform: scale(1);
+	transform: scale(1);
 }
-
 
 /* Filter controls */
 
@@ -754,16 +735,13 @@ button:focus {
 
 .mu-simplefilter li:hover,
 .mu-simplefilter li.active {
-    color: #fff;
-    border-color: #fff;
+	color: #fff;
+	border-color: #fff;
 }
-
-
 
 /*--------------------*/
 /* TEAM */
 /*--------------------*/
-
 
 #mu-team {
 	display: inline;
@@ -785,8 +763,7 @@ button:focus {
 	width: 100%;
 }
 
-
-.mu-team-content{
+.mu-team-content {
 	display: inline;
 	float: left;
 	margin-top: 70px;
@@ -806,8 +783,8 @@ button:focus {
 
 .mu-team-content-single:hover {
 	-webkit-transition: background-color 1000ms linear;
-    -ms-transition: background-color 1000ms linear;
-    transition: background-color 1000ms linear;
+	-ms-transition: background-color 1000ms linear;
+	transition: background-color 1000ms linear;
 }
 
 .mu-team-content-single:hover .mu-team-info {
@@ -836,12 +813,12 @@ button:focus {
 	margin-bottom: 0;
 }
 
-.mu-team-info span{
+.mu-team-info span {
 	font-size: 13px;
 }
 
 .mu-team-social-info {
-	background: rgba(0,0,0,0.85);
+	background: rgba(0, 0, 0, 0.85);
 	position: absolute;
 	left: 0;
 	top: 0;
@@ -860,7 +837,7 @@ button:focus {
 	transition: all 0.5s;
 }
 
-.mu-team-content-single:hover .mu-team-social-info{
+.mu-team-content-single:hover .mu-team-social-info {
 	opacity: 1;
 }
 
@@ -880,19 +857,17 @@ button:focus {
 }
 
 .mu-team-social-info a:hover,
-.mu-team-social-info a:focus{
+.mu-team-social-info a:focus {
 	background-color: #fff;
 	border-color: #fff;
 }
-
-
 
 /*--------------------*/
 /* CLIENT TESTIMONIALS */
 /*--------------------*/
 
 #mu-testimonials {
-	background-image: url("assets/images/testimonials-bg.jpeg");
+	background-image: url("../images/testimonials-bg.jpeg");
 	background-position: center center;
 	background-size: cover;
 	background-attachment: fixed;
@@ -903,9 +878,9 @@ button:focus {
 }
 
 #mu-testimonials::before {
-	background: rgba(0,0,0,0.9);
+	background: rgba(0, 0, 0, 0.9);
 	bottom: 0;
-	content: '';
+	content: "";
 	left: 0;
 	top: 0;
 	right: 0;
@@ -932,17 +907,17 @@ button:focus {
 	width: 100%;
 }
 
-.mu-testimonial-slide li{
+.mu-testimonial-slide li {
 	list-style: none;
 	text-align: center;
 }
 
-.mu-testimonial-slide li p{
+.mu-testimonial-slide li p {
 	color: #fff;
 }
 
 .mu-ct-name {
-	 margin-bottom: 5px; 
+	margin-bottom: 5px;
 	color: #fff;
 	line-height: 1;
 	text-transform: uppercase;
@@ -955,7 +930,7 @@ button:focus {
 }
 
 .mu-testimonial-slide .slick-dots {
-    bottom: -70px;
+	bottom: -70px;
 }
 
 .mu-testimonial-slide .slick-dots li {
@@ -968,7 +943,6 @@ button:focus {
 	height: 3px;
 	padding: 0;
 	width: 35px;
-
 }
 
 .mu-testimonial-slide .slick-dots li button:hover,
@@ -977,11 +951,9 @@ button:focus {
 	opacity: 1;
 }
 
-
 /*--------------------*/
 /* CLIENTS */
 /*--------------------*/
-
 
 #mu-clients {
 	display: inline;
@@ -1003,8 +975,7 @@ button:focus {
 	width: 100%;
 }
 
-
-.mu-clients-content{
+.mu-clients-content {
 	display: inline;
 	float: left;
 	margin-top: 80px;
@@ -1018,7 +989,6 @@ button:focus {
 	width: 100%;
 	padding: 15px;
 }
-
 
 /*--------------------*/
 /* CONTACT US */
@@ -1045,7 +1015,7 @@ button:focus {
 	width: 100%;
 }
 
-.mu-contact-content{
+.mu-contact-content {
 	display: inline;
 	float: left;
 	margin-top: 50px;
@@ -1068,7 +1038,7 @@ button:focus {
 	margin-bottom: 24px;
 }
 
-.mu-contact-form .form-group textarea{
+.mu-contact-form .form-group textarea {
 	color: #333;
 	background: transparent;
 	border: 1px solid #333;
@@ -1080,26 +1050,27 @@ button:focus {
 
 .mu-contact-form .form-control:focus {
 	background-color: #fff;
-    outline: 0;
-    box-shadow: none;    
-} ©
-
-.mu-contact-form .form-control::-webkit-input-placeholder {
+	outline: 0;
+	box-shadow: none;
+}
+© .mu-contact-form .form-control::-webkit-input-placeholder {
 	color: #888;
 	font-size: 15px;
 }
 
-.mu-contact-form .form-control:-moz-placeholder { /* Firefox 18- */
-	color: #888;
-	font-size: 15px; 
-}
-
-.mu-contact-form .form-control::-moz-placeholder {  /* Firefox 19+ */
+.mu-contact-form .form-control:-moz-placeholder {
+	/* Firefox 18- */
 	color: #888;
 	font-size: 15px;
 }
 
-.mu-contact-form .form-control:-ms-input-placeholder {  
+.mu-contact-form .form-control::-moz-placeholder {
+	/* Firefox 19+ */
+	color: #888;
+	font-size: 15px;
+}
+
+.mu-contact-form .form-control:-ms-input-placeholder {
 	color: #888;
 	font-size: 15px;
 }
@@ -1112,7 +1083,7 @@ button:focus {
 
 .mu-contact-form .button-default::after,
 .mu-contact-form .button-default > span {
-	padding: 12px 40px;  
+	padding: 12px 40px;
 }
 
 .mu-contact-right {
@@ -1121,7 +1092,7 @@ button:focus {
 	width: 100%;
 }
 
-.mu-contact-right h4{
+.mu-contact-right h4 {
 	font-size: 24px;
 }
 
@@ -1136,7 +1107,7 @@ button:focus {
 	font-size: 16px;
 }
 
-.mu-contact-right address p i{
+.mu-contact-right address p i {
 	margin-right: 10px;
 }
 
@@ -1166,34 +1137,32 @@ button:focus {
 
 #form-messages {
 	margin-bottom: 10px;
-    background-color: #fff;
+	background-color: #fff;
 }
 
 .success {
-  padding: 1em;
-  margin-bottom: 0.75rem;
-  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
-  color: #468847;
-  background-color: #dff0d8;
-  border: 1px solid #d6e9c6;
-  -webkit-border-radius: 4px;
-     -moz-border-radius: 4px;
-          border-radius: 4px;
+	padding: 1em;
+	margin-bottom: 0.75rem;
+	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+	color: #468847;
+	background-color: #dff0d8;
+	border: 1px solid #d6e9c6;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
 }
 
 .error {
-  padding: 1em;
-  margin-bottom: 0.75rem;
-  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
-  color: #b94a48;
-  background-color: #f2dede;
-  border: 1px solid rgba(185, 74, 72, 0.3);
-  -webkit-border-radius: 4px;
-     -moz-border-radius: 4px;
-          border-radius: 4px;
+	padding: 1em;
+	margin-bottom: 0.75rem;
+	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+	color: #b94a48;
+	background-color: #f2dede;
+	border: 1px solid rgba(185, 74, 72, 0.3);
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
 }
-
-
 
 /* GOOGLE MAP */
 
@@ -1203,25 +1172,21 @@ button:focus {
 	width: 100%;
 }
 
-#mu-google-map iframe{
-    pointer-events: none;
+#mu-google-map iframe {
+	pointer-events: none;
 }
-
-
-
 
 /*--------------------*/
 /* FOOTER */
 /*--------------------*/
 
-
-#mu-footer{
+#mu-footer {
 	display: inline;
 	float: left;
 	width: 100%;
 }
 
-.mu-footer-area{
+.mu-footer-area {
 	display: inline;
 	float: left;
 	padding: 30px 0;
@@ -1229,17 +1194,15 @@ button:focus {
 	width: 100%;
 }
 
-.mu-footer-area a{
+.mu-footer-area a {
 	font-weight: 600;
 }
-
 
 /*--------------------*/
 /* RESPONSIVE STYLE */
 /*--------------------*/
 
 @media (max-width: 1199px) {
-	
 	.mu-featured-slider-content {
 		left: 10%;
 		right: 10%;
@@ -1261,21 +1224,18 @@ button:focus {
 	.navbar-default .mu-menu li a {
 		margin: 10px 12px 5px;
 	}
-
-	
 }
 
 @media (max-width: 991px) {
-	
 	.navbar-default .mu-menu li a {
 		font-size: 14px;
 		margin: 10px 5px;
-	}	
+	}
 
 	.mu-featured-slider-content h1 {
 		font-size: 25px;
 		margin-bottom: 10px;
-	}	
+	}
 
 	.mu-featured-slider-content p {
 		padding: 0;
@@ -1294,19 +1254,17 @@ button:focus {
 		margin-bottom: 15px;
 	}
 
-	.mu-simplefilter li{
+	.mu-simplefilter li {
 		margin-bottom: 10px;
 	}
 
-	.mu-clients-content-single img{
+	.mu-clients-content-single img {
 		width: 100%;
 	}
 
 	.mu-contact-right {
 		margin-top: 50px;
 	}
-	
-		
 }
 
 @media (max-width: 767px) {
@@ -1315,7 +1273,7 @@ button:focus {
 	}
 
 	.navbar-default .navbar-toggle:hover,
-	.navbar-default .navbar-toggle:focus{
+	.navbar-default .navbar-toggle:focus {
 		background-color: transparent;
 	}
 
@@ -1323,8 +1281,9 @@ button:focus {
 		background-color: #fff;
 	}
 
-	.navbar-default .navbar-collapse, .navbar-default .navbar-form {
-		background-color: rgba(0,0,0,0.8);
+	.navbar-default .navbar-collapse,
+	.navbar-default .navbar-form {
+		background-color: rgba(0, 0, 0, 0.8);
 		text-align: center;
 	}
 
@@ -1340,17 +1299,13 @@ button:focus {
 	.mu-testimonial-slide li {
 		padding: 0 15px;
 	}
-	
-		
 }
 
-
-@media (max-width: 640px){
-
+@media (max-width: 640px) {
 	#mu-header.mu-fixed-nav {
 		padding: 10px 0;
 	}
-	
+
 	.mu-featured-slider-content {
 		left: 0;
 		right: 0;
@@ -1377,19 +1332,15 @@ button:focus {
 	.slick-dots {
 		bottom: 15px;
 	}
-			
-
 }
 
-
 @media (max-width: 480px) {
-
 	#mu-header {
 		padding: 10px 0;
 	}
 
-	.navbar-default .navbar-brand, 
-	.navbar-default .navbar-brand:hover, 
+	.navbar-default .navbar-brand,
+	.navbar-default .navbar-brand:hover,
 	.navbar-default .navbar-brand:focus {
 		font-size: 25px;
 		margin-top: 0px;
@@ -1407,7 +1358,7 @@ button:focus {
 		display: none !important;
 	}
 
-	h2{
+	h2 {
 		font-size: 25px;
 	}
 
@@ -1438,13 +1389,9 @@ button:focus {
 	.filtr-item h4 {
 		font-size: 14px;
 	}
-			
-	
 }
 
-
-@media (max-width: 360px){
-
+@media (max-width: 360px) {
 	.mu-featured-slider-content {
 		top: 49%;
 	}
@@ -1477,16 +1424,7 @@ button:focus {
 		padding: 1rem 1rem;
 		font-size: 12px;
 	}
-	
 }
 
-
-
-@media (max-width: 320px){
-	
-	
-	
-	
-	
+@media (max-width: 320px) {
 }
-
