--- a/templates/index.html
+++ b/templates/index.html
@@ -814,7 +814,7 @@
 			<li class="other">How may I help you?</li>
 		</ul>
 		<div class="footer">
-			<div class="text-box" id="queryTextbox" contenteditable="true" disabled="true"></div>
+			<div class="text-box" id="queryTextbox" name="queryBox" contenteditable="true" disabled="true"></div>
 			<button id="sendMessage">send</button>
 		</div>
 	</div>
